--- a/example/src/main/res/layout/activity_main.xml
+++ b/example/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <jrizani.jrspinner.JRSpinner
+            android:hint="Choose"
             android:id="@+id/JRSpinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
