replace all name with prefix jrspinner

--- a/jrspinner/src/main/res/layout/jrspinner_item.xml
+++ b/jrspinner/src/main/res/layout/jrspinner_item.xml
@@ -18,7 +18,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/line"
+        android:background="@color/jrspinner_color_line"
         app:layout_constraintBottom_toBottomOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
