--- a/jrspinner/src/main/res/layout/jrspinner_layout_dialog.xml
+++ b/jrspinner/src/main/res/layout/jrspinner_layout_dialog.xml
@@ -3,13 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black_transparent">
+    android:background="@color/jrspinner_black_transparent">
 
     <View
         android:id="@+id/root"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@color/black_transparent"
+        android:background="@color/jrspinner_black_transparent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,7 +65,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="8dp"
-                android:background="@drawable/search_bg"
+                android:background="@drawable/jrspinner_search_bg"
                 android:drawablePadding="8dp"
                 android:hint="Search"
                 android:paddingStart="48dp"
@@ -95,7 +95,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
-                android:src="@drawable/ic_close"
+                android:src="@drawable/jrspinnericon_close"
                 android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="@+id/search"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -105,7 +105,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:src="@drawable/ic_search"
+                android:src="@drawable/jrspinnericon_search"
                 app:layout_constraintBottom_toBottomOf="@+id/search"
                 app:layout_constraintStart_toStartOf="@+id/search"
                 app:layout_constraintTop_toTopOf="@+id/search" />
