--- a/jrspinner/src/main/res/values/colors.xml
+++ b/jrspinner/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="line">#E0E0E0</color>
-    <color name="color_default">#99000000</color>
-    <color name="black_transparent">#80000000</color>
+    <color name="jrspinner_color_line">#E0E0E0</color>
+    <color name="jrspinner_color_default">#99000000</color>
+    <color name="jrspinner_black_transparent">#80000000</color>
 </resources>
