--- a/example/src/main/res/layout/activity_main.xml
+++ b/example/src/main/res/layout/activity_main.xml
@@ -21,11 +21,12 @@
             android:id="@+id/JRSpinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:singleLine="false"
             android:hint="Choose"
             android:textColor="@color/colorPrimary"
             app:backgroundTint="@color/colorPrimary"
             app:jrs_icon_tint="@color/colorPrimary"
-            app:jrs_multiple="true"
+            app:jrs_multiple="false"
             app:jrs_title="Choose Item" />
 
     </android.support.design.widget.TextInputLayout>
